@@ -50,21 +50,13 @@ application {
 }
 
 checkstyle {
-     toolVersion = '10.0'
+        toolVersion = '10.0'
 }
-
-task physic(type: JavaExec) {
-    description = "Exécute l'application PhysicsApp"
-    group = "custom"
-    main = 'physics.AppPhysic'
-    classpath = sourceSets.main.runtimeClasspath
-
-    doFirst {
-        jvmArgs = [
-            '--module-path', classpath.asPath,
-            '--add-modules', 'javafx.controls,javafx.media,javafx.base,javafx.graphics'
-        ]
+sourceSets {
+    main {
+        resources {
+            srcDirs 'src/main/ressources'
+        }
     }
 }
-
 
